sevfruit-supplier-service: добавлен метод GET /product/{product_id}
