# sevfruit-supplier-service/api/api-spec.yaml
@@ -253,6 +253,67 @@ paths:
                 message: could not execute SQL statement
                 path: /product
 
+  /product/{product_id}:
+    get:
+      operationId: productGet
+      summary: Заданный вид продукции
+      description: Возвращает заданный вид продукции
+      tags:
+      - Product
+      parameters:
+        - name: product_id
+          in: path
+          description: ID вида продукции
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: OK
+          content: 
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+              example:
+                id: 1
+                name: "Яблоки красные"
+        401:
+          description: Запрос не авторизован
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              example:
+                timestamp: 2023-12-15T14:42:03.723+00:00
+                status: 401
+                error: Unauthorized
+                message: Full authentication is required to access this resource
+                path: /product/1
+        404:
+          description: Вид продукции не найден
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              example:
+                timestamp: 2023-12-15T14:42:03.723+00:00
+                status: 404
+                error: Not Found
+                message: Вид продукции 11 не найден
+                path: /product/11
+        500:
+          description: Ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              example:
+                timestamp: 2023-12-15T14:42:03.723+00:00
+                status: 500
+                error: Internal Server Error
+                message: could not execute SQL statement
+                path: /product/1
+
   /period:
     get:
       operationId: periodGetAll
